--- a/Tyuiu.DolgovIV.Sprint6.Task6.V29/FormMain.resx
+++ b/Tyuiu.DolgovIV.Sprint6.Task6.V29/FormMain.resx
@@ -117,4 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonHelp_SAA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAibSURBVFhHnVYHVJRXFp4c15w1e9ZIGSCu7rpqRI0r
+        wmpwrStgiRRjoszAArHrqsHGYkMIIpEqKE2kikNHHJTYkEXKDG2GmaHD0CyACkhREbF8e+4PM8KgG07u
+        Od/533/fvfe7r933WKxRivpar/EanLiDatwk2eecFIy3TFaC/idwU6BulSTT5MYf1FjrNV7V/7fKJ5rr
+        Q6apc5PKtGyv4Fs/KRwuP8R5UR8iZa8RVtKPUNFLBBf1wju7G7ti6rH65yJo2fGhaZ1cxl4fMo1iqAYd
+        rYzR4CaGErF9fBMSaoC0RiDzESDsAgq6gPxOQPgUyOsA7j6h/reIkL5kkrEKqYS27RWwrZJCKZZq8F+T
+        sWqc5JYlTgJESF7j5kOg6BkQUNQJm6hq6J8QYNKPmZhsP4BJ9pmY5yyAdXgVfHM7cLsFiJD2wjGtBfMc
+        sqBpfbmFYqqSfEzGfm6Z1LwtSo6kWkDwFIgpfwGDnwSYeigLuo7ZmHU0B18dy8WcQVB79tEc6B7OxjSH
+        LBi4CBFY1IXLda/hfOMxvvESQ8MquXk0SYxV4yS1Kshp1HuS6zHdIQtfHc2BnlMe5p0QQN/5w6A+sqGk
+        ZjjexbZYOa42vcPx9Fas9CgG2zql9f8lMUbDkhe+5EQe4mveMeRbebWYfSSHmfK/u+Rj/k/5zNfAOR/6
+        zsJhIN1QG9LRzNhGVYPf8BYHUh5gzv47YHPjwj+0Jz6ZYOQ0izZcqLgPuU+BfalN+NvxXMx3zYehWwGD
+        BScLMM9FiFnH8zD9SC6mOuYwoPasY3nQcxZiwVB713zonRBgR1wdYspewiaiFtp2V6Bu7DRL9XR8qs5J
+        qNx9qQHp9wBeZS/mOuXB8GQ+FrkXMljoNkBu4i2CuKkbqiJq6saGICn0XIQMucKP2rQ8/sJOuGe2YYVb
+        IZ2MSuJUsn8203Qi24aPi2VvUNgFGHmL8I9ThVjqUYxlHsXM19CtEJwQmSrvCLEMluFrt/e+BErEyEeM
+        hKp+2ETUQNuOjz/MNJ2o4B+jvv6Ck5mXGMm1b3BB0g3DkwVY7lGMFV4iBss9RZh/shCNbb1KourW59gU
+        WY7NkRUoqO9S6t+8BQxcCxif9/4DSZzOasPB1PvQc/gv2N+HOSn2wjg1y7jKvfGNuNkM2Kc0YdnpIhh7
+        i2HiMwAjLxEzKoX0v3mHxaeLYHiKUIiZxwW439Gn7Nd3LWCIFf6Ef3oWM6fCO6cTi1yEYFsl0DKMowTU
+        qI575XQxZ948QAoTnxKs9pMoseqMBMu9xDiYWIuwnGa4Xm3AUk8xjH1KsMxThEUeInS/fK1MYMGpIpj4
+        Do9B/2YBMlws64OJlxhaNldA3JQAmy4TP8FzCDvBTNcaPwnWnpUOA+koiJFPCfNd5Sdh2it9S9DW80pJ
+        3tjeiyWeYqzxU/H3l8LYR4zYin4Ye4rBHkiATQloUQKed7uZmm7sK4JpgBTmgbIRMBuEaYAMq/0lWO0v
+        Rfvz9+Qk22KqsMpfwtgN82V8SsArf4Xl7sWKGdBiEpjAScHPmZ3IbQczXRZBpfg2uOyjMA8sxQpfCTpf
+        vFESP+npx/ZL1VjlL4NF4EifdUFlWHtOipiyV1jkVqiSADcFrhkdyG4DTM9K8V1wGTacL/8gvj9fDovA
+        Ujim1ivJH/f0wzSwFGYBpfgueKQP4xdSjnWBMlws7YPhT8LhCahbXcaRq6248wiwiarChtBycMIqPgjL
+        sAqsCy4DX9qmTMA1vQnmQaXYeOHjftRnE1mNUNFz6B/LZa5qRQJsdUteLfd8JRKq+3Hs+kNYXqiAdUTV
+        B2EVQQlWwDvjgTKBA8l12HihcoTtUHDDKnEg9R6cfmmF7v5MaFvF1So2oZramtO+S10EOJPXhXBJDzjh
+        lcy9bxs9EjbR1eBGVME8pBxG/qUMLELKGZ2q7VAf68hKeGR1wPJ8BabsugmNbzx9Fcdw3Fi2rgGVRwd+
+        C64/ALbFyRnHTTE1I/DDxRpwIqpwrbRDOQPUJh31qdoT7C5WY3usHEGFzzCPpv8HPj5l6xooChGVwz9p
+        WsbWr/Upgb+gC9FlvbCLrsHmS7XYypMPw+YYOTaGVyvJFUI66lO133KJfGrhk9uJzdG1+Oue29Cxiqsn
+        zqHX8oRx043NtG352BQlR1xVH9wzHzPvgR1xcuyMr1Nie5wc1lE1qvyMjvqG2u4YtHe60QL3O+2Yui8T
+        OnZ8fPalsRlxKshJ6Gr8i7rFOf7sfRnYGduI1Po3cM14hJ1xcvw7oR67EwdA7S08OW5VdirJqU26YXaJ
+        9diVUIejv7QgsICmPg8Tt14De10gn7iGXceDj4M/slisuZpWie1LXITYEduAZPlr5gbbnVSPPcmN2Jsy
+        gN1JjdgeX49NvDoG1CbdjykDGLBrgMutxwz51y5CTN55Azo2Se3EMcg14rlO60HncqEmJ75toVMerMOr
+        ESF+gXDJCzik3YN9SiPsLxOaBr70z+iasE+B1EY4XL2PM4IunLrTjrmHczFpxw3oWCe2UexBjhFPMoXQ
+        g/ELFou1iM1N6Jix5xZWepfg8NVmpoYHF/XAPfMJjqQ/wAF+E4ODhLQmRud65zFzlIMKe2AbWYPJezLw
+        xZZr0PlXYgfFHIz90UepQhRJLNQ0P5tOm0b/aDZWekuwNaYObhlPECl9wdR0KqvRsj5ESV8iuPgZHNOa
+        se6cDLqHsgZGbZcGtsW59MGRj4pcIWRIUzX391MWW7O5vEZt2zR8ufc25hzKgv7xPOgdy8Ocw9mY+Z+7
+        mHEoC9P3Z+LPu29h0vbrDLG2Fa9x3JTF1oNrTrFGTa4QWifaLFNYLNaC342faKZu4hyqxeE1UB0fCh1b
+        PnO8tLm8BrIhW/IZ9KUYH13zXxPaqXRc6MxS4aDnNE3nChaLZawC0lEf2ZAt+ZDviN3+W4VGQaWT6jdd
+        IjStQ0E66iObUY/4fzWBJDh6tpWuAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="toolTip_SAA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>202, 17</value>
+  </metadata>
+  <data name="buttonDone_SAA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAPVSURBVFhHtZfLbxtVFId/Eq9VxUPAv8Cmoi8BQoK2
+        JEW0i5YNC9ghVuxYARIJJC5pkdolSHkUKSnUspp6MpbSKFHUSkFp09CooAY1VUVEHrZnYjuxG8fv1w+d
+        64kVT2x3rLhH+jQj68453z1zZ3wHJAHgWU3Xr2s+H70jI7zWFJo6arrOYa/XJ7kkoeOwBPZJgr1GKBSi
+        2+MZAfCMvU7dsARek5lL/Le0zKXlFcfIeInf3W51NE2TVzwer2MJS+B1aaPE8soqV1b9XPUHnoiMk/ES
+        VzwebkRj6twwDA5rmgHgOXu9XWEXkKT+QNAxMl7C7fEwmUwxFI5UJK56vcEnStgFZGaBoOEYGb8tUCjk
+        GY9vVSTkdgxrWmMJu0DQMGiYpmMCRlBdJ7dAQiSkE9u3QxampuvhuhIVAU0rt840aa6tOSZoGuq6u3Nz
+        SkI6Icj5b9bClCcMwEv22irsAuZaiGuhsGNk/FY8oa6tF9JdqWGvrcIuIEnlHjaDErHYKSYoAU1zLhAO
+        RxiJrO8ZySM0LSAXr69vtATJ1bTAenSDG9FoS5BcTQtEY1FGY7EWEW1eIPZ4s6U0LbC5GW8RW5XHU/7o
+        HAvIq3SvSOFUIstiRqWkzzfmXGArkdgzyWSazJP7vwMvjn/KybFZ5wKJZNIhKaZSaabSGabT2SqymaLK
+        9VYX2OEGv+r70LlAKiWJG5NOpZnL5MlCucX14h0X+GDla3ZeBY+7UHunZBcoz0JmVZ9sJkcWyS7tFA92
+        gIc6wcM7OPI91Ozf7gIf+Lt569Fn/OEa2N5TQ8IukMnkmMlkG5LLlVt8oANcivzC++YpzpunOW+esfhY
+        cd84zYfGz+ydAmcWP2eXDp6wS9gFsvk8s7lcQwqFkhorM18wf2TvNNg3DfbbkN/6boH9t8GBGfDO8hd0
+        jYIfncdoZfdsFygUCszn8w0plRug2j0X+JK9s2DfLNhv588yA9bx8r0XOL64nycvQIruqylQLBaVRCNY
+        bgCPdIJT/jMc+Bu8VIeBe2Uu/QUOzoOuCbCtE1MAXqkWsLZkEqVSqSHbIR2YCB7k4CNwqAaDD8Ff/ykz
+        tAB2T4JHv8UfAN7c1QH5Kmo2Lo5/wnfPgu/1VPN+D3hMOAteXgSH/gVdNyrFDwN4ddcaGNH1uOzd1OeW
+        pjVE3u26b5Rj129ycvw2b0zMVnFz4i6nJxd4/BzoDoLdU+DRb6qK73oKZMN4CEAbgPYWcfKDn8Bzd8Bj
+        1TOv+R6QLbNIyOuyVbzRfgFs68BM3eI7BJ5GvGwttgPy7VmzuMRTFHgewIvWaq/7yf4/LsCWtA9JRgsA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonLoad_SAA.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAVgSURBVFhHxZdpbFRVGIYPLgGJ4EKYxBjRRBNNxBiX
+        CsouEg0xoOhfZAtIoXuHFkoBAYUE6kIpoKg/jNqAlrILUkqIFhEKne6dmc4wLdB9GTot7Z07M33MOR2n
+        7dDpAkTf5Mnce86Z77z3u985914BiP8Tqfsup804lp82BVPqJEypb/TBJGT/5bQZR+V49a+7qFEyON5y
+        0Mqgw3wrmln15++cLC2PCg5wpxorr1BO7jbNRzMtRDMtCuIjaD7NpZRXydvxeh8Z6h9/9o6Fyp5BGWgv
+        QitYgla4HK0ovJvCcLSCZfhq9kGHFbQh4raA74oyESp7XQZumtCKPkYrjkArjgxiJVrRcrTCZUNkKe7C
+        xdBRoupIZjt4cim/gQu4i8Nxl0ThLonuA9kuifTTda73SyR6STjcPI8pVdWPIXhyKYPspDUHd2kE7rIY
+        3GWxA6Jb4vBY4/HajP0Qj88WA63ZmHaqW9CfgbPo5ih0cxy6Ob5fPFYjPnsC9l/fJzdlIrkpr/XNdkkY
+        l1LCyPtqInk7ei3pQFF2GXBlo1tj0a1G9PJVeMoTbsWWgNeWiM+xhisZ87Cnzwa3FTpKob0kNB09KQav
+        pVdRGkypU6DlJHq5EY8tEa8jCV9FEr5KydpedF5N5krGh9j3zcVTsgJ34VK0/CVo+YsHwUI85RvwNP3N
+        2a0TLgohxvQwcByvPZHOCjnBPC5un+BPYTATse+fi9ccg14ajbs40k8E+gC4C5fTWfMDdRd3krZi/Foh
+        xMM9DBxWV+w8vxzrT29D21/g+hNcOT04B67zeOTkshhLu9BLY/GZY8ASDZaovjFH0Vm2ElqyKT+wjJee
+        eehFIcQIZSBPGriRCdfXc+XABzTkxNPpPI1ujvAXZnQXFkkMuiUe3WJUeCxGsMXhNscPiMexFZpOkJs6
+        o04I8bgQ4p5uA65foHoj+bunoTn2qFTp1jhVkHp5QhCJAby2BKiM47ltxxAJZxDGLITxVG9WybYsnk05
+        Te25TfwY90KKEOLRHstwKrTup70sgZJv34TmQ3iubsdjX43HntQvnY41cD0eYTzDQMoodfLuphTeC3tk
+        shBiZG8DN9OpzlpAVVY4OA/irViH15GM1yF/Q0NlMlSvQsRlqUmOmGs46uewuUa1iYgMmtv1gAkReyhT
+        CDG828DOadCeTsn3s+iwfQF13+Gt3IC3cuOAcO0TqEtCxJ5SE2TZ6sm2d5Flq+syEJNJhbOd2lZNnZ+w
+        NjI66Ujg3cKQnzadzsbdFOyeDjfS6az+Et+1zfiufTogVG2GhnUBA39UNpJztUkhj5WB2IOU1ruUCac/
+        Ew+uO969EeXvmoGrKJmKIwvA+TO+6i34qrYOCmq2QNNGROzvKvDF683kVjkVF641q7bZ35xDxGYiojPV
+        7ZAamawMqKejoWDPTBxH5+Mq2gTOvVC/Deq3D46GbdDyWcBAYW2Loqi2hfzqG6qtLz2w9ljg4WQo/Pot
+        VB149kHbXmjdNXja0sD9eaAIrY1tASyNbZQ1tGJWtClkm9SIngZMe2a5pAlZC3mpU4dEQeoUHGmvqD1A
+        St5nh7Nd/f57HKC5q00ZSOo2IPfjl1fOeTpyyTtPRQyVRbPGrZgTNmaJWH1WBa5t06hpDY3sDzZwv39X
+        ekII8eRtME4IMV6syVaBnR0emtr1kMj+YANSw4QQ9/rNDBW5lh8blnRSBe7w+mjTvSGR/VLDgwzcqQzD
+        1x5XgQernqvgbsgwev1vwXP0Kzn+bhoYa0hMz5FB5ZXJ9IZC9stxcnyo1/TbkdxSnxdCTBNCzBwEcpwc
+        3+eHyu1IFqIMJq9IpnUg5Dg5vs9Ptf9U/wAV4Qo0/hOsyAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="textBoxTask_SAA.Text" xml:space="preserve">
+    <value>Дан файл InPutFileTask6V29.txt который может находится в любом месте на диске. Загрузить файл в textBoxIn через openFileDialog. Вывести слова, в которых встречается i, в результирующую строку и вывести ее в textBoxOut.</value>
+  </data>
+  <metadata name="openFileDialogTask_SAA.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
